# mansion-tent

./: .gitignore  LICENSE  README.md  example.env  go.mod  go.sum  init.sh  main.go  pyproject.toml
mansion_tent/: assemble.sh  configuration.py  dispatch.py  launch.py  runner.py
mt_camp/: assemble.sh  configuration.py  launch.py  runner.py
mt_tower/: bot.py  configuration.py  dispatch.py  reaction.py  requirements.txt
share/: perfTimer.go  set.go
tent/: hooks.go  launch.go  sit.go
tower/: bot.go  dispatch.go
